right before removing line strip but adding normal logic

--- a/funWithWebGl/017/viewer.html
+++ b/funWithWebGl/017/viewer.html
@@ -40,6 +40,7 @@
 	<script src="GridFloor.js"></script>
 	<script src="Resources.js"></script>
 	<script src="Terrain.js"></script>
+	<script src="Perlin.js"></script>
 
 	<script>
 		var gl, gRLoop, gShader, gModel, gCamera, gCameraCtrl;
