--- a/funWithWebGl/017/viewer.html
+++ b/funWithWebGl/017/viewer.html
@@ -80,7 +80,14 @@
 					"uPMatrix", gCamera.projectionMatrix,
 				);
 
-			gModel = Terrain.createModel(gl, false)
+			gModel = Terrain.createModel(gl, true)
+
+
+			mDebugLine = new LineDebugger(gl)
+					.addColor("#00FF00")
+					.addMeshNormal(0,0.3,gModel.mesh)
+					.finalize();
+
 			//....................................
 			gRLoop.start();
 			//onRender(0);
@@ -101,6 +108,7 @@
 			gShader.preRender("uCameraMatrix", gCamera.viewMatrix)
 				.renderModel(gModel.preRender(), false);
 
+			mDebugLine.render(gCamera);
 		}
 	</script>
 </head>
@@ -118,8 +126,12 @@
 		uniform mat4 uCameraMatrix;
 		out highp vec2 vUV;
 
+		out float diffuseAngle;
+		const vec3 posLight = vec3(4.0,3.0,2.0);
+
 		void main(void){
-			gl_PointSize = 8.0;
+			diffuseAngle = max(dot(a_norm, normalize(posLight-a_position.xyz)), 0.0);
+
 			vUV = a_uv;
 			gl_Position = uPMatrix * uCameraMatrix * uMVMatrix * vec4(a_position.xyz, 1.0); 
 		}
@@ -127,10 +139,15 @@
 	<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
 		precision mediump float;
 		in highp vec2 vUV;
+		in float diffuseAngle;
 		out vec4 outColor;
 
+		const vec3 lightColor = vec3(0.0,1.0,0.0);
+		const vec3 baseColor = vec3(1.0,0.0,0.0);
+
 		void main(void){
-			outColor = vec4(0.0,0.0,0.0,1.0);
+			vec3 finalColor = lightColor * diffuseAngle + baseColor;
+			outColor = vec4(finalColor,1.0);
 		}
 	</script>
 </body>
