--- a/funWithWebGl/017/viewer.html
+++ b/funWithWebGl/017/viewer.html
@@ -124,30 +124,39 @@
 		uniform mat4 uPMatrix;
 		uniform mat4 uMVMatrix;
 		uniform mat4 uCameraMatrix;
-		out highp vec2 vUV;
 
-		out float diffuseAngle;
-		const vec3 posLight = vec3(4.0,3.0,2.0);
+		out highp vec2 vUV;
+		out highp vec3 posWorld;
+		//out float diffuseAngle;
+
+		//const vec3 posLight = vec3(4.0,3.0,2.0);
 
 		void main(void){
-			diffuseAngle = max(dot(a_norm, normalize(posLight-a_position.xyz)), 0.0);
-
+			//diffuseAngle = max(dot(a_norm, normalize(posLight-a_position.xyz)), 0.0);
+			posWorld = (uMVMatrix *  vec4(a_position.xyz, 1.0)).xyz;
+			
 			vUV = a_uv;
-			gl_Position = uPMatrix * uCameraMatrix * uMVMatrix * vec4(a_position.xyz, 1.0); 
+			gl_Position = uPMatrix * uCameraMatrix * uMVMatrix * vec4(a_position.xyz, 1.0);
 		}
 	</script>
 	<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
 		precision mediump float;
 		in highp vec2 vUV;
-		in float diffuseAngle;
+		in highp vec3 posWorld;
+		//in float diffuseAngle;
 		out vec4 outColor;
 
+		const vec3 posLight = vec3(4.0,3.0,2.0);
 		const vec3 lightColor = vec3(0.0,1.0,0.0);
 		const vec3 baseColor = vec3(1.0,0.0,0.0);
 
 		void main(void){
-			vec3 finalColor = lightColor * diffuseAngle + baseColor;
-			outColor = vec4(finalColor,1.0);
+			vec3 genNorm = normalize(cross(dFdx(posWorld), dFdy(posWorld)));  //Calc new Normals based on World Pos
+			float diffAngle = max(dot(genNorm, normalize(posLight-posWorld)), 0.0);	//Calc angle of line
+			outColor = vec4(baseColor + lightColor * diffAngle,1.0); 
+
+			//vec3 finalColor = lightColor * diffuseAngle + baseColor;
+			//outColor = vec4(finalColor,1.0); //vec4(0.0,0.0,0.0,1.0);
 		}
 	</script>
 </body>
