--- a/funWithWebGl/025/tmpl_simple.html
+++ b/funWithWebGl/025/tmpl_simple.html
@@ -48,30 +48,20 @@
 	<script src="fungi.Debug.js"></script>
 
 	<script>
-		var gCamera, gCameraCtrl, gRenderList, gRLoop, gDebugLine, gModel, gShader;
+		var gCamera, gCameraCtrl, gRenderList, gRLoop, gDebugLine, gModel, gShader, gGridFloor;
 		var gLblFPS;
 
-		var fbo, cID = 100, colorID, blankID;
+		var fbo, cID = 100, colorID;
+		var mtrRenderer, finalShader, finalQuad;
 
 		window.addEventListener("load", function () {
 			//.......................................................
 			//Setup and Preperations
 
 			colorID = idToColor(cID)
-			blankID = idToColor(0) // black color
 			Fungi.Init("FungiCanvas").fClearColor("FFFFFF").fFitScreen(1, 1).fClear();
 
-			Fungi.Render.onItemRendered = function (itm) {
-				if (itm === gGridFloor) return;
-				//Optimize by only rendering to FBO when mouse is is down.
-				gShader.setUniforms("uColorID", colorID);
-				Fungi.Shaders.FBO.activate(fbo);
-				itm.draw();
-				Fungi.Shaders.FBO.deactivate();
-				gShader.setUniforms("uColorID", blankID);
-			}
-
-			fbo = Fungi.Shaders.FBO.colorDepthFBO("picking");
+			fbo = Fungi.Shaders.FBO.build("cBuf", 2, true);
 
 			//.......................................................
 			//Setup Camera
@@ -84,7 +74,7 @@
 
 				.setDownOverride(function (e, ctrl, x, y) {
 					var yi = Fungi.gl.fHeight - y, //Gotta flip the y
-						pixel = Fungi.Shaders.FBO.readPixel(fbo, x, yi),
+						pixel = Fungi.Shaders.FBO.readPixel(fbo, x, yi, 1), // telling it what buffer to read from.
 						id = colorToID(pixel);
 
 					if (id == 0 || id == 16777215) return; //ignore Black and white.
@@ -100,11 +90,15 @@
 			//Create Shaders and Materials
 			gShader = Fungi.Shaders.New("DomShader", "vertex_shader", "fragment_shader")
 				.prepareUniforms(Fungi.UNI_MODEL_MAT_NAME, "mat4", "uColorID", "vec3")
-				.prepareUniformBlocks(uboTransform, 0);
+				.prepareUniformBlocks(uboTransform, 0)
+				.setUniforms("uColorID", colorID)
 
-			var mat = Fungi.Shaders.Material.create("MatDomShader", "DomShader");
-			mat.useCulling = false;
+			finalShader = Fungi.Shaders.New("FinalShader", "vertex_final", "fragment_final")
+				.prepareUniforms("tex0", "tex","tex1","tex");
 
+			Fungi.Shaders.Material.create("MatDomShader", "DomShader");
+			var mat = Fungi.Shaders.Material.create("MatFinalShader", "FinalShader");
+			mat.useModelMatrix = false;
 
 			//.......................................................
 			//Prepare our Renderables
@@ -114,12 +108,14 @@
 			gGridFloor = Fungi.Debug.GridFloor.getRenderable();
 			gRenderList = [gGridFloor, gModel];
 
+			finalQuad = new Fungi.Renderable(Fungi.Primatives.Quad2U(), "MatFinalShader");
+
 			//.......................................................
 			//Create and Start Render Loop
 			gRLoop = new Fungi.RenderLoop(onRender).start();
 
-			//gLblFPS = document.getElementById("lblFPS");
-			//setInterval(function(){ gLblFPS.innerHTML = gRLoop.fps; },200);
+			gLblFPS = document.getElementById("lblFPS");
+			setInterval(function () { gLblFPS.innerHTML = gRLoop.fps; }, 200);
 		});
 
 		function onRender(dt) {
@@ -131,7 +127,10 @@
 			//Start Rendering
 			Fungi.gl.fClear();
 			Fungi.Shaders.FBO.clear(fbo);
-			Fungi.Render(gRenderList);
+			// Cant use fungi render during this lesson.
+			// Fungi.Render(gRenderList);
+			mtrRenderer(gRenderList);
+
 		}
 
 		1//.......................................................
@@ -156,17 +155,46 @@
 					.add(gCamera.up(v, -dy * this.rate));
 			}
 		}
+
+		mtrRenderer = (function () {
+			var material = shader = null;
+			return function (ary) {
+				// Draw everything in our frame buffer first.
+				Fungi.gl.bindFramebuffer(Fungi.gl.FRAMEBUFFER, fbo.id);
+				for (var i = 0; i < ary.length; i++) {
+					//...................................
+					if (material !== ary[i].material) {
+						material = ary[i].material;
+						if (material.shader !== shader) shader = material.shader.activate();
+					}
+
+					//...................................
+					Fungi.gl.bindVertexArray(ary[i].vao.id);
+					if (material.useModelMatrix) material.shader.setUniforms(Fungi.UNI_MODEL_MAT_NAME, ary[i].updateMatrix());
+
+					//...................................
+					ary[i].draw();
+				}
+
+				//THEN AFTER Switch to Display Buffer
+				Fungi.gl.bindFramebuffer(Fungi.gl.FRAMEBUFFER, null);
+
+				//Set up the quad to draw the custom frame buffer to.
+				Fungi.gl.bindVertexArray(finalQuad.vao.id);
+				material = finalQuad.material;
+				shader = material.shader.activate();
+				shader.setUniforms("tex0", fbo.colorBuf[0], "tex1", fbo.colorBuf[1]);
+
+				finalQuad.draw();
+			};
+		})();
+
 	</script>
 </head>
 
 <body>
 	<div><canvas id="FungiCanvas"></canvas></div>
 	<span id="lblFPS">0</div>
-
-		<!-- 
-			During the real draw we set blankColorID as uColorID, and thus we draw the colors below the first conditional.
-
-		-->
 		<script id="vertex_shader" type="x-shader/x-vertex">#version 300 es
 		layout(location=0) in vec4 a_position;
 		layout(location=1) in vec3 a_norm;
@@ -180,19 +208,13 @@
 		uniform mat4 uModalMatrix;
 		uniform mat3 uNormalMatrix;
 
-		// start new
-		const vec3 blankColorID = vec3(0.0,0.0,0.0);
-		uniform vec3 uColorID; // going to pass real color custom frame buffer, if in canvas display, passing blankColorID;
-		// end new 
-
 		out highp vec2 vUV;
 		out lowp vec3 color;
 
 		void main(void){
-			if(uColorID != blankColorID) color = uColorID;
-			else if(a_position.w == 0.0) color = vec3(1.0,0.0,0.0);
-			else if(a_position.w == 1.0) color = vec3(0.0,1.0,0.0);
-			else color = vec3(0.6,0.6,0.6);
+			if(a_position.w == 0.0)			color = vec3(1.0,0.0,0.0);
+			else if(a_position.w == 1.0)	color = vec3(0.0,1.0,0.0);
+			else							color = vec3(0.6,0.6,0.6);
 
 			vUV = a_uv;
 			gl_Position =  matProjection * matCameraView * uModalMatrix * vec4(a_position.xyz, 1.0);
@@ -200,12 +222,92 @@
 	</script>
 		<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
 		precision mediump float;
+
 		in highp vec2 vUV;
 		in lowp vec3 color;
-		out vec4 outColor;
+		uniform vec3 uColorID;
+		
+		//out vec4 outColor;
+		layout(location = 0) out vec4 outColor0;
+		layout(location = 1) out vec4 outColor1;
 
 		void main(void){
-			outColor = vec4(color,1.0);
+			outColor0 = vec4(color,1.0);
+			outColor1 = vec4(uColorID,1.0);
+		}
+	</script>
+		<script id="vertex_final" type="x-shader/x-vertex">#version 300 es
+		layout(location=0) in vec4 a_position;
+		layout(location=2) in vec2 a_uv;
+
+		out highp vec2 vUV;
+
+		void main(void){
+			vUV = vec2(a_uv.s,1.0-a_uv.t);
+			gl_Position =  vec4(a_position.xyz, 1.0);
+		}
+	</script>
+		<script id="fragment_final" type="x-shader/x-fragment">#version 300 es
+		precision mediump float;
+
+		in highp vec2 vUV;
+
+		uniform sampler2D tex0;
+		uniform sampler2D tex1;
+
+		out vec4 outColor;
+
+		const float offset = 1.0 / 300.0; 
+
+		void main(void){
+			vec4 c = texture(tex0, vUV);
+			vec4 d = texture(tex1, vUV);
+
+			//Simple Drawing Frame
+			//outColor = c; 
+			
+			//Invert Color
+			outColor = vec4(1.0, 1.0, 1.0, 1.0) - vec4(c.rgb, 0.0);
+			//outColor = 1.0 - d;
+
+			//Gray Scale
+			//float a = (c.r + c.g + c.b) / 3.0;
+			//outColor = vec4(a, a, a, 1.0);
+
+			//Kernal Effects
+			/*
+			vec2 offsets[9] = vec2[](
+				vec2(-offset, offset),  // top-left
+				vec2(0.0f,    offset),  // top-center
+				vec2(offset,  offset),  // top-right
+				vec2(-offset, 0.0f),    // center-left
+				vec2(0.0f,    0.0f),    // center-center
+				vec2(offset,  0.0f),    // center-right
+				vec2(-offset, -offset), // bottom-left
+				vec2(0.0f,    -offset), // bottom-center
+				vec2(offset,  -offset)  // bottom-right    
+			);
+
+			float kernel[9] = float[](
+				//Sharpen 
+				-1.0, -1.0, -1.0,
+				-1.0,  9.0, -1.0,
+				-1.0, -1.0, -1.0
+				//Blur
+				//1.0 / 16.0, 2.0 / 16.0, 1.0 / 16.0,
+				//2.0 / 16.0, 4.0 / 16.0, 2.0 / 16.0,
+				//1.0 / 16.0, 2.0 / 16.0, 1.0 / 16.0  
+			);
+			
+			//Get Pixels based on offset.
+			vec3 sampleTex[9];
+			for(int i = 0; i < 9; i++) sampleTex[i] = vec3(texture(tex0, vUV.st + offsets[i])); 
+
+			vec3 col = vec3(0.0);
+			for(int i = 0; i < 9; i++) col += sampleTex[i] * kernel[i]; 
+
+			outColor = vec4(col, 1.0);
+			*/
 		}
 	</script>
 		<!--
