--- a/funWithWebGl/026/tmpl_simple.html
+++ b/funWithWebGl/026/tmpl_simple.html
@@ -44,72 +44,63 @@
 
 	<script src="fungi.core.js"></script>
 	<script src="fungi.primatives.js"></script>
-	<script src="fungi.CameraMouseCtrl.js"></script>
+	<script src="fungi.KBMCtrl.js"></script>
 	<script src="fungi.Debug.js"></script>
+	<script src="fungiApp.js"></script>
 
 	<script>
-		var gCamera, gCameraCtrl, gRenderList, gRLoop, gDebugLine, gModel, gShader, gGridFloor;
-		var gLblFPS;
+		var gModel;
 
-		var fbo, cID = 100, colorID;
-		var mtrRenderer, finalShader, finalQuad;
+		var fbo, mtrRenderer, finalShader, finalQuad;
 
 		window.addEventListener("load", function () {
 			//.......................................................
 			//Setup and Preperations
-
-			colorID = idToColor(cID)
-			Fungi.Init("FungiCanvas").fClearColor("FFFFFF").fFitScreen(1, 1).fClear();
-
+			FungiApp.startup();
 			fbo = Fungi.Shaders.FBO.build("cBuf", 2, true);
 
 			//.......................................................
 			//Setup Camera
-			var uboTransform = Fungi.Shaders.UBO.createTransformUBO();
-			gCamera = new Fungi.CameraOrbit().setPosition(0, 0.5, 5).setEulerDegrees(-15, 45, 0);
-
-			gCameraCtrl = new Fungi.KBMCtrl()
-				.addHandler("camera", new Fungi.KBMCtrl_Viewport(gCamera), true)
-				.addHandler("pick", new KBMCtrl_Picking())
-
+			FungiApp.mainCamera.setEulerDegrees(-15, 0, 0);
+			FungiApp.ctrlCamera.addHandler("pick", new KBMCtrl_Picking())
 				.setDownOverride(function (e, ctrl, x, y) {
 					var yi = Fungi.gl.fHeight - y, //Gotta flip the y
-						pixel = Fungi.Shaders.FBO.readPixel(fbo, x, yi, 1), // telling it what buffer to read from.
+						pixel = Fungi.Shaders.FBO.readPixel(fbo, x, yi, 1),
 						id = colorToID(pixel);
 
 					if (id == 0 || id == 16777215) return; //ignore Black and white.
 
 					//console.log(pixel,id);
 					ctrl.switchHandler("pick");
+					ctrl._activeHandler.id = id;
 				});
 
 
-			//gCameraCtrl = new Fungi.CameraMouseCtrl(gCamera);
-
 			//.......................................................
 			//Create Shaders and Materials
-			gShader = Fungi.Shaders.New("DomShader", "vertex_shader", "fragment_shader")
-				.prepareUniforms(Fungi.UNI_MODEL_MAT_NAME, "mat4", "uColorID", "vec3")
-				.prepareUniformBlocks(uboTransform, 0)
-				.setUniforms("uColorID", colorID)
+			Fungi.Shaders.New("DomShader", "vertex_shader", "fragment_shader")
+				.prepareUniforms(Fungi.UNI_MODEL_MAT_NAME, "mat4")
+				.prepareUniformBlocks(FungiApp.uboTransform, 0);
 
 			finalShader = Fungi.Shaders.New("FinalShader", "vertex_final", "fragment_final")
-				.prepareUniforms("tex0", "tex","tex1","tex");
+				.prepareUniforms("tex0", "tex", "tex1", "tex");
 
 			Fungi.Shaders.Material.create("MatDomShader", "DomShader");
-			var mat = Fungi.Shaders.Material.create("MatFinalShader", "FinalShader");
-			mat.useModelMatrix = false;
+			Fungi.Shaders.Material.create("MatFinalShader", "FinalShader").useModelMatrix = false;
 
 			//.......................................................
 			//Prepare our Renderables
-			gModel = new Fungi.Renderable(Fungi.Primatives.FacedCube(), "MatDomShader").setPosition(0, 0.5, 0);
-			//gDebugLine = Fungi.Debug.Lines.getRenderable();
+			ary = [];
+			ind = [];
+			Fungi.Primatives.AppendCube(ary, ind, 0.5, 0.5, 0.5, 0, 0, 0, 1);		//Move on Camera Direction
+			Fungi.Primatives.AppendCube(ary, ind, 0.5, 1, 0.5, 0, 1.2, 0, 2);		//Move on Y
+			Fungi.Primatives.AppendCube(ary, ind, 1, 0.5, 0.5, -1.2, 0, 0, 3);		//Move on X
+			Fungi.Primatives.AppendCube(ary, ind, 0.5, 0.5, 1, 0, 0, 1.2, 4);		//Move on Z
+			gModel = new Fungi.Renderable(Fungi.Shaders.VAO.standardMesh("tGadget", 4, ary, null, null, ind, false), "MatDomShader"); // based on 4 since w is id number
+			FungiApp.scene.push(gModel);
 
-			gGridFloor = Fungi.Debug.GridFloor.getRenderable();
-			gRenderList = [gGridFloor, gModel];
 
 			finalQuad = new Fungi.Renderable(Fungi.Primatives.Quad2U(), "MatFinalShader");
-
 			//.......................................................
 			//Create and Start Render Loop
 			gRLoop = new Fungi.RenderLoop(onRender).start();
@@ -119,18 +110,8 @@
 		});
 
 		function onRender(dt) {
-			//.......................................................
-			//Run Frame Updates
-			gCamera.update();//.setDegY(20 * dt).update();
-
-			//.......................................................
-			//Start Rendering
-			Fungi.gl.fClear();
-			Fungi.Shaders.FBO.clear(fbo);
-			// Cant use fungi render during this lesson.
-			// Fungi.Render(gRenderList);
-			mtrRenderer(gRenderList);
-
+			FungiApp.update();
+			mtrRenderer(FungiApp.scene);
 		}
 
 		1//.......................................................
@@ -146,13 +127,112 @@
 
 		// Switch to this handler if we click an object with an ID to move object on screen
 		class KBMCtrl_Picking {
-			constructor() { this.rate = 0.007; }
+			constructor() {
+				//this.rate = 0.025;
+				this.id = 0;								//Currently Active ID - see around line 78 where we set
+				this.lineX0 = 0;							//Dragging line, 0 is positive direction, 1 is negative.
+				this.lineY0 = 0;
+				this.lineX1 = 0;
+				this.lineY1 = 0;
+				this.initDelta = 0;							//Initial Distance on the drag line from the point of click and max positive position
+				this.dir = new Fungi.Maths.Vec3();			//Determine which direction we're moving
+				this.startPos = new Fungi.Maths.Vec3();		//Starting world space position of the model being dragged.
+				this.v3Tmp = new Fungi.Maths.Vec3();		//Reusable vars for calcs. Save memory from redeclaring them for every frame.
+				this.v3Final = new Fungi.Maths.Vec3();
+			}
 			onMouseUp(e, ctrl, x, y, dx, dy) { ctrl.switchHandler("camera"); } // once done moving, we want to control viewport again.
+			onMouseDown(e, ctrl, x, y) {
+				//Save Direction
+				switch (this.id) { // color ids
+					case 255: gModel.up(this.dir); break;			// Y
+					case 65280: gModel.left(this.dir); break;		// X
+					case 16711680: gModel.forward(this.dir); break;	// Z
+					case 3355443: return;								// Camera View
+				}
+
+				this.startPos.copy(gModel.position);	//Backup current position
+
+				var a = this.dir.clone().multi(2);		//Positive Dir (Call it up)   IN WORLD SPACE
+				var b = this.dir.clone().multi(-2);		//Negative Dir (Call it down)
+				FungiApp.debugLines.reset().addVector(a, b, "ff0000").update();	//Visually see the travel line
+
+				//Move points from World space -> View Space -> Clip space
+				//View space -> Where the camera exists
+				// I think this is right:
+				// Clip space is the space points are in just before they get normalized. If they are outside viewport, they are discarded.
+				// After clipping, NDC are the normalized visible values between -1 and 1 of the viewport.
+				// https://www.scratchapixel.com/lessons/3d-basic-rendering/perspective-and-orthographic-projection-matrix/projection-matrix-GPU-rendering-pipeline-clipping
+				// here's the resource pablo uses https://learnopengl.com/Getting-started/Coordinate-Systems
+				var m4 = new Float32Array(16);			//Matrix4 Holder
+				Fungi.Maths.Matrix4.mult(m4, FungiApp.mainCamera.projectionMatrix, FungiApp.mainCamera.invertedLocalMatrix); // projection matrix multiplcation brings into clip space,  camera mat multi does world space to view space 
+
+				var p0 = Fungi.Maths.Matrix4.multiplyVector(m4, [a[0], a[1], a[2], 1]),
+					p1 = Fungi.Maths.Matrix4.multiplyVector(m4, [b[0], b[1], b[2], 1]);
+
+				//Move from Clip Space to NDC Space (Normalized Device Coordinate Space) (-1 to 1 opengl viewport)
+				//only if W is not zero,
+				if (p0[3] != 0) {
+					p0[0] = p0[0] / p0[3];
+					p0[1] = p0[1] / p0[3];
+				}
+
+				if (p1[3] != 0) {
+					p1[0] = p1[0] / p1[3];
+					p1[1] = p1[1] / p1[3];
+				}
+
+				//Then finally move the points to Screen Space
+				//Map points from -1 to 1 range into  0 to 1 range, Then multiple by canvas size
+				// This is important for mimicking the Mouse's X/Y coordinate system.
+				var nx0 = (p0[0] + 1) / 2 * Fungi.gl.fWidth,
+					ny0 = (-p0[1] + 1) / 2 * Fungi.gl.fHeight,
+					nx1 = (p1[0] + 1) / 2 * Fungi.gl.fWidth,
+					ny1 = (-p1[1] + 1) / 2 * Fungi.gl.fHeight;
+
+				//Save the locking line starting and end position
+				var dx = (nx0 - nx1) * 10, //Move the X,Y points passed the boundaries of the canvas.. just making the lines longer. better ways to do this but this is just easier.
+					dy = (ny0 - ny1) * 10;
+
+				this.lineX0 = x + dx;	//Max Positive Direction
+				this.lineY0 = y + dy;
+				this.lineX1 = x - dx;	//Max Negative Direction
+				this.lineY1 = y - dy;
+
+				//Get the closets point on the line that the mouse currently is and save it as our initial position.
+				var p = Fungi.Util.pointCloseToLine(this.lineX0, this.lineY0, this.lineX1, this.lineY1, x, y);
+				this.initDelta = v2mag(p[0], p[1], this.lineX0, this.lineY0); //Save distance from max positive, it will become a pivot point.
+			}
 			onMouseMove(e, ctrl, x, y, dx, dy) {
-				var v = [0, 0, 0];
-				gModel.position
-					.add(gCamera.left(v, dx * this.rate)) // move object based on where camera is looking
-					.add(gCamera.up(v, -dy * this.rate));
+				//....................................................
+				//Camera view based movement
+				if (this.id == 3355443) { // black color
+					var v = [0, 0, 0];
+					gModel.position
+						.add(FungiApp.mainCamera.left(v, dx * 0.021))
+						.add(FungiApp.mainCamera.up(v, -dy * 0.021));
+					return;
+				}
+
+				//....................................................
+				//Single Axis Movement
+				this.v3Tmp.copy(this.dir); //Start off with the direction we're moving
+
+				//Clamp the Mouse movement to the limit of our testing line, then find the closets spot on the line
+				// need to clamp otherwise pointCloseToLine doesnt really work that well.
+				var cx = Fungi.Util.clamp(x, Math.min(this.lineX0, this.lineX1), Math.max(this.lineX0, this.lineX1)),
+					cy = Fungi.Util.clamp(y, Math.min(this.lineY0, this.lineY1), Math.max(this.lineY0, this.lineY1)),
+					p = Fungi.Util.pointCloseToLine(this.lineX0, this.lineY0, this.lineX1, this.lineY1, cx, cy);
+
+				//Find the distance from Max Positive Position on the Line.
+				var d = v2mag(p[0], p[1], this.lineX0, this.lineY0),
+					delta = this.initDelta - d;	//Difference compaired to the distance from mouse down... how far did we go since we started moving.
+
+				//Figure out how far to the model using the init distance as a pivot point.
+				//Anything before the pivot point is moving in the negative direction, else positive.
+				this.v3Tmp.multi(delta * 0.01);			//How much to move in direction, think of it like a rate.
+				this.v3Final.copy(this.startPos);	 	//Get starting position that was saved
+				this.v3Final.add(this.v3Tmp);			//Then add how far to move from - add movement to starting position
+				gModel.position.copy(this.v3Final);		//Copy position to model.
 			}
 		}
 
@@ -161,6 +241,8 @@
 			return function (ary) {
 				// Draw everything in our frame buffer first.
 				Fungi.gl.bindFramebuffer(Fungi.gl.FRAMEBUFFER, fbo.id);
+				Fungi.gl.clear(Fungi.gl.COLOR_BUFFER_BIT | Fungi.gl.DEPTH_BUFFER_BIT); //New
+
 				for (var i = 0; i < ary.length; i++) {
 					//...................................
 					if (material !== ary[i].material) {
@@ -189,6 +271,14 @@
 			};
 		})();
 
+		// Find the distance between two points in 3d space.
+		function v2mag(x0, y0, x1, y1) {
+			var dx = x1 - x0,
+				dy = y1 - y0;
+			return Math.sqrt(dx * dx + dy * dy);
+		}
+
+
 	</script>
 </head>
 
@@ -196,136 +286,76 @@
 	<div><canvas id="FungiCanvas"></canvas></div>
 	<span id="lblFPS">0</div>
 		<script id="vertex_shader" type="x-shader/x-vertex">#version 300 es
-		layout(location=0) in vec4 a_position;
-		layout(location=1) in vec3 a_norm;
-		layout(location=2) in vec2 a_uv;
-
-		uniform UBOTransform{
-			mat4 matProjection;
-			mat4 matCameraView;
-		};
-
-		uniform mat4 uModalMatrix;
-		uniform mat3 uNormalMatrix;
-
-		out highp vec2 vUV;
-		out lowp vec3 color;
-
-		void main(void){
-			if(a_position.w == 0.0)			color = vec3(1.0,0.0,0.0);
-			else if(a_position.w == 1.0)	color = vec3(0.0,1.0,0.0);
-			else							color = vec3(0.6,0.6,0.6);
-
-			vUV = a_uv;
-			gl_Position =  matProjection * matCameraView * uModalMatrix * vec4(a_position.xyz, 1.0);
-		}
-	</script>
-		<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
-		precision mediump float;
-
-		in highp vec2 vUV;
-		in lowp vec3 color;
-		uniform vec3 uColorID;
-		
-		//out vec4 outColor;
-		layout(location = 0) out vec4 outColor0;
-		layout(location = 1) out vec4 outColor1;
-
-		void main(void){
-			outColor0 = vec4(color,1.0);
-			outColor1 = vec4(uColorID,1.0);
-		}
-	</script>
-		<script id="vertex_final" type="x-shader/x-vertex">#version 300 es
-		layout(location=0) in vec4 a_position;
-		layout(location=2) in vec2 a_uv;
-
-		out highp vec2 vUV;
-
-		void main(void){
-			vUV = vec2(a_uv.s,1.0-a_uv.t);
-			gl_Position =  vec4(a_position.xyz, 1.0);
-		}
-	</script>
-		<script id="fragment_final" type="x-shader/x-fragment">#version 300 es
-		precision mediump float;
-
-		in highp vec2 vUV;
-
-		uniform sampler2D tex0;
-		uniform sampler2D tex1;
-
-		out vec4 outColor;
-
-		const float offset = 1.0 / 300.0; 
-
-		void main(void){
-			vec4 c = texture(tex0, vUV);
-			vec4 d = texture(tex1, vUV);
-
-			//Simple Drawing Frame
-			//outColor = c; 
-			
-			//Invert Color
-			outColor = vec4(1.0, 1.0, 1.0, 1.0) - vec4(c.rgb, 0.0);
-			//outColor = 1.0 - d;
-
-			//Gray Scale
-			//float a = (c.r + c.g + c.b) / 3.0;
-			//outColor = vec4(a, a, a, 1.0);
-
-			//Kernal Effects
-			/*
-			vec2 offsets[9] = vec2[](
-				vec2(-offset, offset),  // top-left
-				vec2(0.0f,    offset),  // top-center
-				vec2(offset,  offset),  // top-right
-				vec2(-offset, 0.0f),    // center-left
-				vec2(0.0f,    0.0f),    // center-center
-				vec2(offset,  0.0f),    // center-right
-				vec2(-offset, -offset), // bottom-left
-				vec2(0.0f,    -offset), // bottom-center
-				vec2(offset,  -offset)  // bottom-right    
-			);
-
-			float kernel[9] = float[](
-				//Sharpen 
-				-1.0, -1.0, -1.0,
-				-1.0,  9.0, -1.0,
-				-1.0, -1.0, -1.0
-				//Blur
-				//1.0 / 16.0, 2.0 / 16.0, 1.0 / 16.0,
-				//2.0 / 16.0, 4.0 / 16.0, 2.0 / 16.0,
-				//1.0 / 16.0, 2.0 / 16.0, 1.0 / 16.0  
-			);
-			
-			//Get Pixels based on offset.
-			vec3 sampleTex[9];
-			for(int i = 0; i < 9; i++) sampleTex[i] = vec3(texture(tex0, vUV.st + offsets[i])); 
-
-			vec3 col = vec3(0.0);
-			for(int i = 0; i < 9; i++) col += sampleTex[i] * kernel[i]; 
-
-			outColor = vec4(col, 1.0);
-			*/
-		}
-	</script>
-		<!--
-	Textures -> Models -> Shaders -> Materials -> Renderables
+			layout(location=0) in vec4 a_position;
+			layout(location=1) in vec3 a_norm;
+			layout(location=2) in vec2 a_uv;
 	
-	<[CONFIG]>
-	{ name:"ShaderOne", uniblocks:["UBOTransform",0], uniforms:["uModelMatrix","mat4"], tex:[] }
-	<[MATERIAL]>
-	[
-		{name:"Material1",shader:"ShaderOne",useCulling:true,useBlend:false,useModelMat:true,useNormalMat:false,drawMode:gl.TRIANGLES,
-			uniforms:[ {name:"uColor",type="vec3",value="1.0,0.0,0.0"} ]
-		}
-	]
-	<[VERTEX]>
-	#version 300 es
-	<[FRAGMENT]>
-	#version 300 es
--->
+			uniform UBOTransform{
+				mat4 matProjection;
+				mat4 matCameraView;
+			};
+	
+			uniform mat4 uModalMatrix;
+			uniform mat3 uNormalMatrix;
+	
+			out highp vec2 vUV;
+			out lowp vec3 color;
+			out lowp vec3 pcolor;
+	
+			void main(void){
+				if(a_position.w == 1.0)			color = vec3(0.2,0.2,0.2);
+				else if(a_position.w == 2.0)	color = vec3(1.0,0.0,0.0);
+				else if(a_position.w == 3.0)	color = vec3(0.0,1.0,0.0);
+				else if(a_position.w == 4.0)	color = vec3(0.0,0.0,1.0);
+				else							color = vec3(0.6,0.6,0.6);
+	
+				vUV = a_uv;
+				gl_Position =  matProjection * matCameraView * uModalMatrix * vec4(a_position.xyz, 1.0);
+			}
+		</script>
+		<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
+			precision mediump float;
+	
+			in highp vec2 vUV;
+			in lowp vec3 color;
+			uniform vec3 uColorID;
+			
+			//out vec4 outColor;
+			layout(location = 0) out vec4 outColor0;
+			layout(location = 1) out vec4 outColor1;
+	
+			void main(void){
+				outColor0 = vec4(color,1.0);
+				outColor1 = vec4(color,1.0); //vec4(uColorID,1.0);
+			}
+		</script>
+
+
+		<script id="vertex_final" type="x-shader/x-vertex">#version 300 es
+			layout(location=0) in vec4 a_position;
+			layout(location=2) in vec2 a_uv;
+	
+			out highp vec2 vUV;
+	
+			void main(void){
+				vUV = vec2(a_uv.s,1.0-a_uv.t);
+				gl_Position =  vec4(a_position.xyz, 1.0);
+			}
+		</script>
+		<script id="fragment_final" type="x-shader/x-fragment">#version 300 es
+			precision mediump float;
+	
+			in highp vec2 vUV;
+	
+			uniform sampler2D tex0;
+			uniform sampler2D tex1;
+	
+			out vec4 outColor;
+	
+			void main(void){
+				outColor = texture(tex0,vUV);
+			}
+		</script>
 </body>
 
 </html>
